<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunOnAdbActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adb_howto_text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_adbcommandfull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:padding="5dp"
        android:textColor="@color/black"
        android:background="#e3e6e8"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adb_howto_directly"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_adbquick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:padding="5dp"
        android:textColor="@color/black"
        android:background="#e3e6e8"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adb_howto_done"
        android:layout_marginBottom="10dp"/>

</LinearLayout>