<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/netrual_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_gsi_info"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_gsi_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_description"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_file"
                        android:inputType="none" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supported_file_formats"
                        android:textStyle="italic" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/netrual_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userdata_size_dsu"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_ds_size"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/system_accent"
                            android:checked="true" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_decrease"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:minHeight="0dp"
                            android:text="-"
                            android:textColor="@color/white"
                            android:visibility="gone" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_ds_size"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:inputType="number" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_increase"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:minHeight="0dp"
                            android:text="+"
                            android:textColor="@color/white"
                            android:visibility="gone" />


                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_defaultuserdata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_userdata_help"
                        android:textStyle="italic" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/netrual_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gsi_file_size"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_gsi_size"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/system_accent"
                            android:checked="true" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_gsi_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="number"
                            android:text="@string/auto" />

                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gsi_size_warning"
                        android:textStyle="italic" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/netrual_color">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_options"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_keepawake"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/system_accent"
                            android:checked="false"
                            android:textColor="@android:color/tab_indicator_text" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="@string/keep_screen_on" />


                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_install"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:enabled="false"
                android:text="@string/start_process"
                android:textSize="18sp"
                app:icon="@drawable/ic_system_security_update"
                app:iconSize="24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_debugbuild"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/error" />

        </LinearLayout>


    </ScrollView>

</FrameLayout>